implement keycloak security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,13 @@
 spring.servlet.multipart.max-file-size=100MB
 # Max request size.
 spring.servlet.multipart.max-request-size=1GB
+
+#keycloak configuration
+server.port                         = 8080
+keycloak.realm                      = resilientnetidp
+keycloak.auth-server-url            = https://idp.resilientnet.com/auth
+keycloak.ssl-required               = external
+keycloak.resource                   = filemanager-backend
+keycloak.credentials.secret         = <CLIENT_SECRET>
+keycloak.use-resource-role-mappings = true
+keycloak.bearer-only                = true
